# OCT-Converter

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
examples/: web_service_client_example.html
oct_converter/dicom/: dicom.py  e2e_meta.py
oct_converter/image_types/: __init__.py  fundus.py  metadata_types.py  oct.py  write_image.py
oct_converter/readers/: boct.py  dicom.py  e2e.py  fda.py  fds.py  img.py  poct.py
scripts/: dicom_demo.py  e2e_demo.py  eyepy_qt_viewer.py  eyepy_test.py  fa_qt_viewer.py  fda_demo.py  hdb_fa_qt.py  oct_viewer_vendor_modes.py  oct_web_viewer.html  oct_web_viewer.py  parse_dicomdir.py  parse_shiwei_dcm.py  parse_shiwei_encg.py  parse_shiwei_location.py  parse_tupai_db.py  parse_tupai_db2.py  parse_tupai_location.py  parse_zeiss_oct_dataset.py  prase_zeiss_fa.py  read_bmp_series.py  read_dcm_series.py  shiwei_qt_viewer.py  topcon_fa_qt.py  zeiss_dicom.py  zeiss_dicom_test.py  zeiss_fa_qt.py  zeiss_qt_viewer.py
scripts/fa/: fa_qt_viewer.py  hdb_fa_parser.py  hdb_fa_parser_2.py  hdb_fa_parser_3.py  hdb_fa_qt.py  topcon_fa_parser.py  topcon_fa_qt.py  zeiss_fa_parser.py  zeiss_fa_qt.py
scripts/oct/: eyepy_test.py  parse_fda_xml.py  parse_shiwei_location.py  parse_zeiss_location.py  zeiss_qt_viewer.py
scripts/old/: dicom_demo.py  e2e_demo.py  e2e_demo2.py  (+26 more)
web_viewer/: README.md  SERVICE_API.md  __init__.py  app.py  fa_app.py  fa_server.py  fa_state.py  fa_web_viewer.html  fa_web_viewer.py  oct_viewer_vendor_modes.py  oct_web_viewer.html  oct_web_viewer.py  service.py  shiwei_loader.py  state.py  tupai_loader.py  web_service.py  zeiss_loader.py
(+18 files in other folders)
